--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+/* App.css */
+.navigation-box {
+  position: fixed;
+  top: 40px;
+  right: 40px;
+  background-color: black;
+  padding: 10px;
+  border-radius: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navigation-box ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex; /* Display flex to arrange items horizontally */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navigation-box li {
+  margin-right: 20px; /* Add margin between links */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navigation-box a {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-decoration: none;
 }
