--- a/src/Footer.css
+++ b/src/Footer.css
@@ -2,9 +2,9 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #333; /* Example background color */
-  color: #fff; /* Example text color */
-  padding: 5px; /* Adjust padding as needed */
+  background-color: #333; 
+  color: #fff; 
+  padding: 5px; 
   text-align: center;
-  height: 50px; /* Set the height of the footer */
+  height: 50px; 
 }
