--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,42 +1,41 @@
-/* Navbar.css */
 body {
-  position: relative; /* Make the body element a reference for absolute positioning */
+  position: relative; 
 }
 
 body::before {
-  content: ''; /* Create a pseudo-element */
-  position: absolute; /* Position the pseudo-element */
-  top: 0; /* Position it at the top of the body */
-  left: 0; /* Align it to the left */
-  width: 100%; /* Cover the entire width of the body */
-  height: 60px; /* Adjust the height as needed */
-  background-color: black; /* Set the background color */
-  z-index: 999; /* Ensure it's behind the navbar */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Add shadow effect */
+  content: '';
+  position: absolute;
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 60px; 
+  background-color: black; 
+  z-index: 999; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 nav {
-  position: fixed; /* Fix the navbar at the top of the page */
+  position: fixed; 
   top: 0;
   left: 0;
-  width: 100%; /* Cover the entire width of the page */
+  width: 100%; 
   background-color: rgb(0, 0, 0);
   color: rgb(0, 0, 0);
-  padding: 20px; /* Adjust padding to increase navbar height */
-  z-index: 1000; /* Ensure navbar stays on top of other content */
-  transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Add transition effect for background color and box shadow */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Add shadow effect */
+  padding: 20px; 
+  z-index: 1000; 
+  transition: background-color 0.3s ease, box-shadow 0.3s ease; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 nav:hover {
-  background-color: rgba(69, 73, 87, 0.562); /* Change background color on hover */
+  background-color: rgba(69, 73, 87, 0.562); 
   
 }
 
 nav ul {
   list-style-type: none;
-  padding: 0; /* Reset padding */
-  margin: 0; /* Add this line to reset margin */
+  padding: 0; 
+  margin: 0;
 }
 
 nav ul li {
