--- a/src/Footer.css
+++ b/src/Footer.css
@@ -3,8 +3,9 @@
   bottom: 0;
   width: 100%;
   background-color: #333; 
-  color: #fff; 
+  color: #69acc7; 
   padding: 5px; 
   text-align: center;
   height: 40px; 
 }
+
