--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,46 +1,13 @@
-nav {
-  background-color: #101827;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000; /* Ensure the navbar appears above other content */
+.navbar {
+  /* Add styles for navbar */
 }
 
-/* Additional styles for dropdown menu (if needed) */
-.dropdown {
-  position: relative;
-  display: inline-block;
+.navbar-brand {
+  /* Add styles for navbar-brand */
 }
 
-.dropbtn {
-  background-color: #101827;
-  color: white;
-  padding: 10px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #000000;
-  min-width: 160px;
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: rgb(255, 255, 255);
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #162231;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
+.navbar-logo {
+  /* Add styles for logo */
+  max-width: 100px; /* Adjust the width as needed */
+  height: auto;
 }
