--- a/src/Footer.css
+++ b/src/Footer.css
@@ -3,7 +3,7 @@
   bottom: 0;
   width: 100%;
   background-color: #333; 
-  color: #69acc7; 
+  color: #ffffff; 
   padding: 5px; 
   text-align: center;
   height: 40px; 
