--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -17,9 +17,8 @@
 }
 
 
-@media (max-width: 992px) {
-  .offcanvas {
+
+  .offcanvas .sidebar{
     background-color: rgba(255, 255, 255, 0.15); /* Adjusted color value */
     backdrop-filter: blur(10px);
   }
-}
