--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -8,7 +8,7 @@
 
 .navbar-logo {
   /* Add styles for logo */
-  max-width: 90px; /* Adjust the width as needed */
+  max-width: 100px; /* Adjust the width as needed */
   height: auto;
 }
 
@@ -19,6 +19,6 @@
 
 
   .offcanvas .sidebar{
-    background-color: rgba(255, 255, 255, 0.15); /* Adjusted color value */
+    background-color: rgb(0, 0, 0); /* Adjusted color value */
     backdrop-filter: blur(10px);
   }
